Removed all static keywords from GUI